2012-12-06  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.19.0-rc3 Released.

	* chan_local: Fix local_pvt ref leak in local_devicestate().

	Regression introduced by ASTERISK-20390 fix.

	(closes issue ASTERISK-20769)
	Reported by: rmudgett

2012-12-05  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.19.0-rc2 Released.

	* Fix a SIP request memory leak with TLS connections.

	During the TLS re-work in chan_sip some TLS specific code was moved
	into a separate function. This function operates on a copy of the
	incoming SIP request. This copy was never deinitialized causing a
	memory leak for each request processed.

	This function is now given a SIP request structure which it can use
	to copy the incoming request into. This reduces the amount of memory
	allocations done since the internal allocated components are reused
	between packets and also ensures the SIP request structure is
	deinitialized when the TLS connection is torn down.

	(closes issue ASTERISK-20763)
	Reported by: deti

2012-11-06  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.19.0-rc1 Released.

2012-11-05 22:50 +0000 [r375893]  Matthew Jordan <mjordan@digium.com>

	* bridges/bridge_softmix.c, include/asterisk/timing.h,
	  res/res_musiconhold.c, channels/chan_iax2.c,
	  res/res_fax_spandsp.c, res/res_timing_kqueue.c, main/timing.c,
	  main/channel.c, res/res_timing_pthread.c, res/res_timing_dahdi.c,
	  res/res_timing_timerfd.c: Refactor ast_timer_ack to return an
	  error and handle the error in timer users Currently, if an
	  acknowledgement of a timer fails Asterisk will not realize that a
	  serious error occurred and will continue attempting to use the
	  timer's file descriptor. This can lead to situations where errors
	  stream to the CLI/log file. This consumes significant resources,
	  masks the actual problem that occurred (whatever caused the timer
	  to fail in the first place), and can leave channels in odd